# fast-ner

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.dev.yaml  fast-ner-api.dev.dockerfile  pyproject.toml  requirements.txt
app/fast-ner/: main.py
