[tool.poetry]
name = "fast-ner"
version = "0.1.0"
description = "spaCy NER served via FastAPI"
authors = ["William Howell <wlm.howell@gmail.com>"]
readme = "README.md"
packages = [{include = "fast-ner", from = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
spacy = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
prefer-active-python = true # 2023-08-25 EXPERIMENTAL
